--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,12 @@
     text-align: center;
 }
 
-.active {
-    color: #5f99be;
-}
+/* body {
+    background-image: url(/src/images/sparrow.jpeg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100vw;
+    background-position: center;
+} */
 
-.navbar {
-    text-align: right;
-}
-
-.navbar li {
-    display: inline-block;
-    padding: 10px 5px;
-}
